--- a/creditos.html
+++ b/creditos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credits</title>
-    <link rel="stylesheet" href="creditos.css">
+    <link rel="stylesheet" href="./creditos.css">
 </head>
 <body>
 
@@ -34,7 +34,7 @@
             <p>Special thanks to everyone who helped with the development and testing of the game.</p>
         </div>
 
-        <a class="glow-on-hover" href="menu.html"> Back to menu </a>
+        <a class="glow-on-hover" href="../Menu/menu.html"> Back to menu </a>
     </div>
 
 </body>
