--- a/game.html
+++ b/game.html
@@ -4,14 +4,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="./game.css">
     <meta charset="utf-8" />
   </head>
   <body>
     <main>
     </main>
-    <script src="index.js"></script>
+    <script src="game.js"></script>
 
-    <a class="glow-on-hover" href="menu.html"> 👈 </a>
+    <a class="glow-on-hover" href="../Menu/menu.html"> 👈 </a>
   </body>
 </html>
