--- a/creditos.html
+++ b/creditos.html
@@ -3,39 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Credits</title>
-    <link rel="stylesheet" href="./creditos.css">
+    <title>Créditos</title>
+    <link rel="stylesheet" href="creditos.css"> <!-- Arquivo CSS -->
 </head>
 <body>
 
-    <div class="container">
-        <h1>Credits</h1>
+<div class="container">
+    <h1>Créditos</h1>
 
-        <div class="credit-section">
-            <h2>Development</h2>
-            <p>Matheus Decol - Programming and Design</p>
-        </div>
-
-        <div class="credit-section">
-            <h2>Tools Used</h2>
-            <ul>
-                <li>HTML, CSS, JavaScript</li>
-                <li>Image Editor: Photoshop e Canva</li>
-            </ul>
-        </div>
-
-        <div class="credit-section">
-            <h2>Músicas e Sons</h2>
-            <p>Sons retirados de <a href="https://freesound.org" target="_blank">Freesound</a> e <a href="https://pixabay.com/sound-effects/" target="_blank">Pixabay</a></p>
-        </div>
-
-        <div class="credit-section">
-            <h2>Thanks</h2>
-            <p>Special thanks to everyone who helped with the development and testing of the game.</p>
-        </div>
-
-        <a class="glow-on-hover" href="../Menu/menu.html"> Back to menu </a>
+    <div class="credit-section">
+        <h2>Desenvolvimento</h2>
+        <p>Matheus Decol - Programação e Design</p>
     </div>
+
+    <div class="credit-section">
+
+        <h2>Ferramentas Utilizadas</h2>
+
+        <ul>
+
+            <li>Linguagem: HTML, CSS, JavaScript</li>
+            <li>Editor de Imagem: Photoshop e Canva.</li>
+
+        </ul>
+
+    </div>
+
+    <div class="credit-section">
+
+        <h2>Comentários</h2>
+        <p>Jogo feito para revisar alguns conceitos de JS, HTML e CSS.</p>
+
+    </div>
+
+    <div class="credit-section">
+
+        <h2>Agradecimentos</h2>
+        <p>Agradecimento especial a todos que ajudaram no desenvolvimento e testes do jogo.</p>
+
+    </div>
+
+    <a href="menu.html" class="back-button">Voltar ao Menu</a>
+
+</div>
 
 </body>
 </html>
