--- a/game.html
+++ b/game.html
@@ -10,8 +10,6 @@
   <body>
     <main>
     </main>
-    <script src="game.js"></script>
-
-    <a class="glow-on-hover" href="../Menu/menu.html"> 👈 </a>
+    <script src="index.js"></script>
   </body>
 </html>
